--- a/app/src/main/res/layout/collection_card.xml
+++ b/app/src/main/res/layout/collection_card.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/white"
@@ -14,7 +13,7 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
@@ -32,7 +31,10 @@
             android:layout_below="@id/collection_image"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
-            android:text="@string/default_collection_name" />
+            android:text="@string/default_collection_name"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/collection_item_location"
@@ -40,8 +42,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/collection_name"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="12dp"
-            android:text="@string/default_collection_location" />
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/default_collection_location"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
