--- a/app/src/main/res/layout/activity_collection_view.xml
+++ b/app/src/main/res/layout/activity_collection_view.xml
@@ -16,14 +16,14 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:toolbarId="@+id/toolbar"
+            app:toolbarId="@+id/collectionToolbar"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
 
             app:contentScrim="?attr/colorPrimary">
 
             <ImageView
-                android:id="@+id/app_bar_image"
+                android:id="@+id/collection_app_bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
@@ -31,11 +31,12 @@
                 android:scaleType="centerCrop" />
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/collectionToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:title="COLLECTION NAME"
-                app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"></androidx.appcompat.widget.Toolbar>
+                app:titleTextAppearance="@style/TextAppearance.AppCompat.Large">
+            </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -51,7 +52,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/collection_view_description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="COLLECTION DESCRIPTION"
@@ -62,7 +63,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/collection_view_location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="LOCATION"
@@ -71,7 +72,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                app:layout_constraintTop_toBottomOf="@+id/collection_view_description" />
 
             <TextView
                 android:id="@+id/textView"
@@ -81,7 +82,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+                app:layout_constraintTop_toBottomOf="@+id/collection_view_location" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
