Readded picking images from Gallery and added more strings in strings.xml

--- a/app/src/main/res/layout/activity_qr_scan.xml
+++ b/app/src/main/res/layout/activity_qr_scan.xml
@@ -19,7 +19,7 @@
         app:title="Scan QR Code" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/qr_scan_image"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:contentDescription="@string/qr_code_image"
@@ -37,7 +37,7 @@
         android:text="@string/resultString"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/qr_scan_image" />
 
     <TextView
         android:id="@+id/result_text"
@@ -50,14 +50,31 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/scanQRButton"
+        android:id="@+id/camera_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="takeImage"
         android:text="@string/scan_qr_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/space"
+        app:layout_constraintTop_toBottomOf="@+id/result_text" />
+
+    <Button
+        android:id="@+id/select_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/select_image_string"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/space"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result_text" />
+
+    <Space
+        android:id="@+id/space"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
