--- a/app/src/main/res/layout/activity_collection_view.xml
+++ b/app/src/main/res/layout/activity_collection_view.xml
@@ -88,11 +88,70 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:src="@android:drawable/ic_input_add" />
+        android:layout_margin="16dp">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_collection_item_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@android:drawable/ic_input_add"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_collection_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="24dp"
+            android:src="@android:drawable/ic_menu_today"
+            app:fabSize="normal"
+            app:layout_constraintEnd_toEndOf="@+id/add_collection_item_fab"
+            app:layout_constraintStart_toStartOf="@+id/add_collection_item_fab"
+            app:layout_constraintBottom_toTopOf="@+id/add_collection_item_fab"
+            />
+
+        <TextView
+            android:id="@+id/add_collection_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/rounded_text_view"
+            android:text="@string/add_collection"
+            app:layout_constraintBottom_toBottomOf="@+id/add_collection_fab"
+            app:layout_constraintEnd_toStartOf="@+id/add_collection_fab"
+            app:layout_constraintTop_toTopOf="@+id/add_collection_fab" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_item_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@android:drawable/ic_input_get"
+            app:fabSize="normal"
+            app:layout_constraintEnd_toEndOf="@+id/add_collection_item_fab"
+            app:layout_constraintStart_toStartOf="@+id/add_collection_item_fab"
+            app:layout_constraintBottom_toTopOf="@+id/add_collection_fab"
+            />
+
+        <TextView
+            android:id="@+id/add_item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/rounded_text_view"
+            android:text="@string/add_item"
+            app:layout_constraintBottom_toBottomOf="@+id/add_item_fab"
+            app:layout_constraintEnd_toStartOf="@+id/add_item_fab"
+            app:layout_constraintTop_toTopOf="@+id/add_item_fab" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
