--- a/app/src/main/res/layout/activity_new_entity.xml
+++ b/app/src/main/res/layout/activity_new_entity.xml
@@ -26,11 +26,12 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="28dp"
+        android:background="@drawable/edit_text_border"
         android:ems="10"
         android:hint="@string/name"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColorHint="#808080"
-        android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_new_entity_header" />
@@ -42,15 +43,15 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="28dp"
+        android:background="@drawable/edit_text_border"
         android:ems="10"
         android:hint="@string/location"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColorHint="#808080"
-        android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_new_entity_name"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/et_new_entity_name" />
 
     <Button
         android:id="@+id/bt_new_entity_create"
