Add Identifying Label to card for Collection/Item

--- a/app/src/main/res/layout/collection_card.xml
+++ b/app/src/main/res/layout/collection_card.xml
@@ -48,6 +48,21 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/typeLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/card_field_bottom"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="0dp"
+            android:background="#808080"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            android:textStyle="italic" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
