--- a/app/src/main/res/layout/activity_collection_view.xml
+++ b/app/src/main/res/layout/activity_collection_view.xml
@@ -80,9 +80,10 @@
         android:id="@+id/collectionViewActivity_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:paddingBottom="?attr/actionBarSize"
         app:layout_anchor="@+id/appbar"
         app:layout_anchorGravity="bottom"
-        android:layout_gravity="bottom"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </androidx.recyclerview.widget.RecyclerView>
