--- a/app/src/main/res/layout/activity_qr_view.xml
+++ b/app/src/main/res/layout/activity_qr_view.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QRViewActivity">
+    tools:context=".QRViewActivity"
+    android:background="@color/white">
 
     <Button
         android:id="@+id/scan_qr_button"
