--- a/app/src/main/res/layout/collaboration_activity.xml
+++ b/app/src/main/res/layout/collaboration_activity.xml
@@ -24,14 +24,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/edit_text_border"
         app:layout_constraintBottom_toTopOf="@+id/etNewCollaborator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/display_owner">
+        app:layout_constraintTop_toBottomOf="@+id/tvOwnerEmail">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCollaborator"
@@ -67,4 +67,16 @@
         android:text="@string/add"
         app:layout_constraintBaseline_toBaselineOf="@+id/etNewCollaborator"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tvOwnerEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/email_hint"
+        android:textAlignment="center"
+        android:textColor="#808080"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/display_owner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
