--- a/app/src/main/res/menu/collectionview_menu.xml
+++ b/app/src/main/res/menu/collectionview_menu.xml
@@ -7,5 +7,8 @@
     <item android:id="@+id/miCollectionCollabScreen"
         android:title="Collaboration"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/miScanQR"
+        android:title="@string/scan_qr_button" />
 
 </menu>
