Added ChangeImage to CollectionView_menu and handler in CollectionView

--- a/app/src/main/res/menu/collectionview_menu.xml
+++ b/app/src/main/res/menu/collectionview_menu.xml
@@ -5,6 +5,9 @@
 
     <!-- Collaboration Screen Button -->
     <item
+        android:id="@+id/miChangeImage"
+        android:title="Change Image" />
+    <item
         android:id="@+id/miScanQR"
         android:title="@string/scan_qr_button" />
     <item android:id="@+id/miCollectionCollabScreen"
