--- a/app/src/main/res/layout/activity_qr_view.xml
+++ b/app/src/main/res/layout/activity_qr_view.xml
@@ -39,7 +39,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/save_image_button"
+        android:id="@+id/save_qr_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
