3-dot Menu Now Displays User Information

--- a/app/src/main/res/menu/homescreen_menu.xml
+++ b/app/src/main/res/menu/homescreen_menu.xml
@@ -3,10 +3,17 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Logout Button -->
+    <!-- Welcome Item -->
+    <item
+        android:id="@+id/miGreeting"
+        android:title="Welcome!" />
+
+    <!-- SCAN QR CODE Button -->
     <item
         android:id="@+id/miScanQR"
         android:title="@string/scan_qr_button" />
+
+    <!-- LOGOUT button -->
     <item android:id="@+id/miLogout"
         android:title="@string/logout"
         app:showAsAction="never"/>
